--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -62,6 +62,7 @@
     
 }
 
+/******* iPhones landscape *******/
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 568px)
@@ -109,6 +110,69 @@
           background-attachment: scroll;
       }
 }
+
+/******* Galaxy Phones landscape *******/
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 2) 
+  and (orientation: landscape) {
+    .hero__wrap {
+          background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid--small.jpg');
+          height: 65vh;
+          background-attachment: scroll;
+      }
+}
+
+@media screen 
+  and (device-width: 320px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: landscape) {
+    .hero__wrap {
+          background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid--small.jpg');
+          height: 65vh;
+          background-attachment: scroll;
+      }
+}
+
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 4) 
+  and (orientation: landscape) {
+    .hero__wrap {
+          background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid--small.jpg');
+          height: 65vh;
+          background-attachment: scroll;
+      }
+}
+
+/******* Pixel Phones landscape *******/
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) 
+  and (orientation: landscape) {
+    .hero__wrap {
+          background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid--small.jpg');
+          height: 65vh;
+          background-attachment: scroll;
+      }
+}
+
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 4) 
+  and (orientation: landscape) {
+    .hero__wrap {
+          background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid--small.jpg');
+          height: 65vh;
+          background-attachment: scroll;
+      }
+}
+
 
 
 
