--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -40,6 +40,23 @@
 
 .current-cal--item {
     margin-bottom: .75em;
+    
+    opacity: 0;
+    transform: translateY(-200%) scale(1.3);
+    transition: all 800ms cubic-bezier(.68, -.55, .265, 1.55);
+}
+
+.current-cal--item:nth-of-type(2) {
+    transition-delay: 500ms;
+}
+
+.current-cal--item:nth-of-type(3) {
+    transition-delay: 1000ms;
+}
+
+.current-cal--item--visible {
+    opacity: 1;
+    transform: translateY(0) scale(1);
 }
 
 .current-cal--span {
