--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -1,12 +1,7 @@
 
-
-
-
-
 .hero--overflow {
     overflow: hidden;
 }
-
 
 .hero {
 
@@ -14,13 +9,13 @@
     
     &__wrap {    
         height: 75vh;
-        background-image: linear-gradient(to bottom, rgba(0,0,0,.4), rgba(0,0,0,.4)), url('../img/hero-paid.jpg');
+        background-image: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,.5)), url('../img/hero-paid.jpg');
         background-size: cover;
         background-attachment: fixed;
         color: rgba(255,255,255,.8);
         position: relative;
         background-repeat: no-repeat;
-        background-position: center center;
+        background-position: center center;       
         
         @include breakpoint (max-width 500px) {
             height: 55vh;
@@ -33,30 +28,39 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        
+        /*** This was the fix to keep the subheading from text wrapping ***/
+        width: max-content;
     }
     
     &__heading {
-        text-transform: uppercase;
         font-weight: 300;
-        font-size: 4em;
+        font-size: 6em;
         letter-spacing: 2px;
         line-height: 1;
-        margin-bottom: .3em;
         
-        &--span {
-            font-size: .5em;
+        
+        @include breakpoint (max-width $medium) {
+            font-size: 10.3vw;
         }
         
     }
     
     &__subheading {
-        font-size: 3em;
-        text-transform: uppercase;
-        margin-bottom: .7em;
+        font-size: 3.5em;
+        
+        @include breakpoint (max-width $medium) {
+            font-size: 7.7vw;
+        }
         
         &--span {
             color: $aqua;
         }
+    }
+    
+    &__span {
+        font-weight: 300;
+        font-size: .9em;
     }
     
 }
