page load then hero text animate

--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -54,6 +54,14 @@
     transition-delay: 1000ms;
 }
 
+.current-cal--item:nth-of-type(4) {
+    transition-delay: 1500ms;
+}
+
+.current-cal--item:nth-of-type(4) {
+    transition-delay: 2000ms;
+}
+
 .current-cal--item--visible {
     opacity: 1;
     transform: translateY(0) scale(1);
@@ -97,8 +105,6 @@
             order: -1;
         }
     }
-    
-    
     
     &__image {
         width: 100%;
