--- a/scss/modules/_aboutus.scss
+++ b/scss/modules/_aboutus.scss
@@ -1,15 +1,35 @@
 
 .hero__wrap--two {
-    background-image: url('../img/wall.jpg');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,.3)), url('../img/wall.jpg');
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     
     @include breakpoint (max-width 500px) {
-        background-image: url('../img/wall--small.jpg');
+        background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,.3)), url('../img/wall--small.jpg');
     }
 
 }
 
-.hero__heading {
+.hero__hdg {
+    font-size: 4.5em;
     color: #fff;
+    font-family: 'Bubblegum Sans', sans-serif;
+    letter-spacing: 2px;
+    
+    @include breakpoint (max-width $medium-760) {
+        font-size: 3.75em;
+    }
+    
+    @include breakpoint (max-width $small-560) {
+        font-size: 3.2em;
+    }
+    
+    @include breakpoint (max-width $tiny-369) {
+        font-size: 2.6em;
+    }
+    
 }
 
 .aboutus {
