fix staff pic at landscape

--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -1,7 +1,7 @@
 .hero__wrap--five {
     background-image: url('../img/staff.jpg');
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: 90%;
 }
 
 /**** iPhones landscape *****/
@@ -96,7 +96,6 @@
           background-position: center;
       }
 }
-
 
 
 .staff {
