--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -1,3 +1,4 @@
+
 .hero__wrap--five {
     background-image: url('../img/staff.jpg');
     background-repeat: no-repeat;
@@ -203,6 +204,61 @@
 
     }
     
+    &__summary--noabsolute {
+        position: relative;
+        top: auto;
+        left: auto;
+        right: auto;
+        bottom: auto;
+        width: 50%;
+        padding: 2em;
+        box-shadow: 0px 0px 2px 2px rgba(0,0,0,.2);
+        margin: 3.5em auto;
+        
+        text-align: center;
+        
+        @include breakpoint (max-width $smaller-450) {
+            padding: 1.5em 1em;
+        }
+        
+         @include breakpoint (max-width $tiny-369) {
+            font-size: .92em;
+        }
+        
+        
+        &::after {
+            position: absolute;
+            content: "";
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 3px;
+            background: $pink-brush;
+            z-index: 1;
+            transition: height 300ms ease-out;
+        }
+        
+        &:hover::after {
+            height: 100%;
+        }
+        
+        &:hover .staff__title {
+            color: #fff;
+        }
+        
+        &:hover .staff__email {
+            color: #fff;
+        }
+        
+        &:hover .staff__icon {
+            fill: #fff;
+        }
+        
+        
+        
+        
+    }
+    
     &__summary:hover::after {
         height: 100%;
     }
@@ -236,6 +292,10 @@
     
     &__summary--green::after {
         background: $green-brush;
+    }
+    
+    &__summary--orange::after {
+        background: $orange-brush;
     }
     
     &__name {
