--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -1,7 +1,7 @@
 
 .current-cal {
-    /* use a low max-width to keep the text size the same until 600pm then it scales down as the viewport width decreases */
-    max-width: 600px;
+    /* use a low max-width to keep the text size the same until 730px then it scales down as the viewport width decreases */
+    max-width: 730px;
     margin: 0 auto 8em auto;
     padding: 0 1em;
     text-align: center;
@@ -28,28 +28,35 @@
     margin-top: 2em;
     display: inline-block;
     text-align: left;
-    
+
     @include breakpoint (max-width 500px) {
-        font-size: .9em;
+        font-size: .95em;
     }
     
     @include breakpoint (max-width $smaller-400) {
-        font-size: .87em;
+        font-size: .9em;
     }
 }
 
 .current-cal--item {
     margin-bottom: .75em;
-    
+    font-size: 1.05em;
+    line-height: 1.4;
     opacity: 0;
     transform: translateY(-200%) scale(1.3);
     transition: all 800ms cubic-bezier(.68, -.55, .265, 1.55);
+}
+
+.current-cal--item--flex {
+    display: flex;
+    align-items: flex-start;
 }
 
 .current-cal--item:nth-of-type(2) {
     transition-delay: 500ms;
 }
 
+/*
 .current-cal--item:nth-of-type(3) {
     transition-delay: 1000ms;
 }
@@ -58,9 +65,10 @@
     transition-delay: 1500ms;
 }
 
-.current-cal--item:nth-of-type(4) {
+.current-cal--item:nth-of-type(5) {
     transition-delay: 2000ms;
 }
+*/
 
 .current-cal--item--visible {
     opacity: 1;
@@ -72,11 +80,16 @@
 }
 
 .current-cal--img {
-    width: 15px;
+    width: 16px;
     display: inline-block;
     transform: translateY(3px);
-    margin-right: 3px;
+    margin-right: 5px;
+    
+    @include breakpoint (max-width 500px) {
+        width: 14px;
+    }
 }
+
 
 .gallery {
     
