lowered hero text

--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -26,7 +26,7 @@
     
     &__center {
         position: absolute;
-        top: 50%;
+        top: 60%;
         left: 50%;
         transform: translate(-50%, -50%);
         
@@ -58,7 +58,7 @@
         }
         
         &--span {
-            color: $aqua;
+            color: lighten($aqua, 6%);
         }
     }
     
