--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -11,16 +11,6 @@
     padding: 0;
 }
 
-
-/* check for overflowed elements - use mobile devtools simulator
-
-* {
-    outline: 1px solid red;
-}
-
-*/
-
-
 body {
     font-size: 100%;
     font-family: 'Lato', sans-serif;
@@ -121,23 +111,42 @@ section {
     // these allow bg imgs to be repeated without clipping.
     background-repeat: round; // or space
     
-    
     @include breakpoint (max-width $small-560) {
         height: 100px;    
     }
     
 }
 
+
+/** IE11 cannot have a text node be a grid cell **/
+.ie {
+    display: block;
+    -ms-grid-column: 2;
+    
+    /** fallback for grid-gap **/
+    margin: .5em;
+    margin-left: .5em;
+    
+    /** reset margin for supported browsers **/
+    @supports (display: grid) {
+        margin: 0;
+    }
+    
+}
+
 .line__subhdg {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr max-content 1fr;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    grid-column-gap: .5em;
+    
     max-width: 1280px;
     text-transform: uppercase;
     color: $gray-dark;
     font-size: 1.65em;
     margin: 0 auto 1em auto;
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    grid-column-gap: .5em;
-    align-items: center;
     letter-spacing: .02em;
     word-spacing: .05em;
     
@@ -146,6 +155,14 @@ section {
     }
     
     &::before {
+        /* generated content works with grid but it must be set as display: block (inline-block might be ok too)*/
+        display: block;
+        
+        -ms-grid-column: 1;
+        
+        /** this must be used as -ms-flex-align: center on the grid parent does not work **/
+        -ms-grid-row-align: center;
+        
         content: "";
         height: .3125em;
         background-image: linear-gradient(to left, $aqua, transparent);
@@ -153,6 +170,14 @@ section {
     }
     
     &::after {
+        /* generated content works with grid but it must be set as display: block (inline-block might be ok too)*/
+        display: block;
+        
+        -ms-grid-column: 3;
+        
+        /** this must be used as -ms-flex-align: center on the grid parent does not work **/
+        -ms-grid-row-align: center;
+        
         content: "";
         height: .3125em;
         background-image: linear-gradient(to right, $aqua, transparent);
