--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -30,20 +30,44 @@
     }
     
     &__grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-        grid-gap: 2em;
-        align-items: center;
+        /** flexbox fallback for IE11 **/
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        
+        @supports (display: grid) {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            grid-gap: 2em;
+            align-items: center;         
+        }
         
         @include breakpoint (max-width $large-980) {
-            grid-gap: 1em;
+            @supports (display: grid) {
+                grid-gap: 1em;
+            }
         }
         
         @include breakpoint (max-width 622px) {
-            grid-gap: 3em 1em;
+            @supports (display: grid) {
+                grid-gap: 3em 1em;
+            }
         }
         
     }
+    
+    /** flexbox fallback for IE11 **/
+    &__grid > * {
+        width: 300px;
+        margin: 1em;
+        
+        @supports (display: grid) {
+            width: auto;
+            margin: 0;
+        }
+        
+    }
+    
     
     &__wrap {
         background-color: #fff;
