--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -31,15 +31,39 @@
     }
     
     &__main {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-gap: 2.5em;
+        /** flexbox fallback for IE11 **/
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        
+        @supports (display: grid) {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-gap: 2.5em;    
+        }
+        
         margin: 3em 0;
         line-height: 1.4;
         
         @include breakpoint (max-width $smaller-450) {
-            grid-gap: 3.5em;
+            
+            @supports (display: grid) {
+                grid-gap: 3.5em;    
+            }
+
         }
+    }
+    
+    /** flexbox fallback for IE11 **/
+    &__main > * {
+        width: 250px;
+        margin: 1em;
+        
+        @supports (display: grid) {
+            width: auto;
+            margin: 0;
+        }
+        
     }
     
     &__subheading {
