--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -1,5 +1,4 @@
 
-
 .hero__wrap--seven {
     background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,.3)), url('../img/business-girl--large.jpg');
     background-attachment: scroll;
@@ -15,7 +14,6 @@
 
 }
 
-
 .forms {
     
     &__grid {
@@ -23,19 +21,39 @@
     }
     
     &__wrap {
-        color: $gray-darkest; 
+        display: -ms-grid;
         display: grid;
+        color: $gray-darkest;
+        
+        /** min-content and max-content are supported by ie11 **/
+        -ms-grid-columns: min-content 1fr;
         grid-template-columns: min-content 1fr;
         grid-template-rows: auto auto;
         grid-column-gap: 1em;
-        margin-bottom: 2.5em;
+        margin-bottom: 2.5em; 
     }  
     
     &__link {
+        
+        /** grid item cannot be an inline element in IE11 **/
+        display: block;
+        
+        -ms-grid-column: 1;
         grid-column: 1 / 2;
+        /** must use the following 2 for a row or col span **/
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 2;
+        
         grid-row: 1 / 3;
         color: inherit;
         transition: color 300ms ease-out;
+        
+        /** fallback for grid-gap in IE11 **/
+        margin-right: 1em;
+        /** reset margin for browsers that support grid **/
+        @supports (display: grid) {
+            margin: 0;
+        }
         
         &:hover {
             color: $gray;
@@ -43,10 +61,16 @@
     }
     
     &__item {
+        -ms-grid-column: 2;
         grid-column: 2 / 3;
+        -ms-grid-row: 1;
         grid-row: 1 / 2;
         font-size: 1.2em;
+        
+        /** ie11 syntax for align-self  **/
+        -ms-grid-row-align: end;
         align-self: end;
+        
         margin-bottom: .1em;
         
         @include breakpoint (max-width $smaller-450) {
@@ -56,9 +80,13 @@
     }
     
     &__info {
+        -ms-grid-column: 2;
         grid-column: 2 / 3;
+        -ms-grid-row: 2;
         grid-row: 2 / 3;
         font-style: italic;
+        
+        -ms-grid-row-align: start;
         align-self: start;
         
         @include breakpoint (max-width $smaller-450) {
