IE11 fixes for program and classes

--- a/scss/modules/_curriculum.scss
+++ b/scss/modules/_curriculum.scss
@@ -105,9 +105,12 @@
     }
     
     /* This is necessary to make the bottom ratio section fill the entire height of its contents */
-    &__main {
-        display: flex;
-        flex-direction: column;
+    /* flexbox fix for IE11 **/
+    @supports (display: grid) {
+        &__main {
+            display: flex;
+            flex-direction: column;
+        }    
     }
     
     &__top {
