--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -1,4 +1,14 @@
 
+.note {
+    font-size: 1.3em;
+    color: darkred;
+    margin-top: 1em;
+    width: 80%;
+    margin: 3em auto 2em auto;
+    border: 1px solid darkred;
+    padding: 1em;
+}
+
 .hero__wrap--seven {
     background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,.3)), url('../img/business-girl--large.jpg');
     background-attachment: scroll;
@@ -13,6 +23,7 @@
     }
 
 }
+
 
 .forms {
     
