--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -1,4 +1,15 @@
 
+.registration {
+   max-width: 1280px;
+   margin: 5em auto 2em auto;
+   text-align: center;
+    font-size: 1.1em;
+    border: 1px solid #222;
+    padding: 1em;
+    width: 60%;
+}
+
+
 .cards {
     
     &__about {
