--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -56,6 +56,10 @@
     transition-delay: 500ms;
 }
 
+.current-cal--item:nth-of-type(3) {
+    transition-delay: 900ms;
+}
+
 /*
 .current-cal--item:nth-of-type(3) {
     transition-delay: 1000ms;
