--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -1,8 +1,8 @@
 
 .hero__wrap--five {
-    background-image: url('../img/staff.jpg');
+    background-image: url('../img/staff-masks.jpeg');
     background-repeat: no-repeat;
-    background-position: 90%;
+    background-position: 42%;
 }
 
 /**** iPhones landscape *****/
