--- a/scss/modules/_gallery.scss
+++ b/scss/modules/_gallery.scss
@@ -72,6 +72,10 @@
     transition-delay: 2000ms;
 }
 
+.current-cal--item:nth-of-type(7) {
+    transition-delay: 2400ms;
+}
+
 
 .current-cal--item--visible {
     opacity: 1;
